--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -24,7 +24,7 @@ jobs:
           cache: yarn
 
       - name: 安装依赖
-        run: yarn install --frozen-lockfile
+        run: yarn
 
       - name: 构建文档
         env:
